gccida/g0/getpwd
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/getpwd.c:536:5: error: use of undeclared identifier 'pwd_1'
p = pwd_1; 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/getpwd.c:537:7: error: use of undeclared identifier 'pwd_1'
if ( !pwd_1 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/getpwd.c:540:7: error: use of undeclared identifier 'failure_errno_0'
*v0 = failure_errno_0; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/getpwd.c:560:1: error: use of undeclared identifier 'failure_errno_0'
failure_errno_0 = e; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/getpwd.c:561:24: error: use of undeclared identifier 'failure_errno_0'
*__errno_location( ) = failure_errno_0; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/getpwd.c:567:1: error: use of undeclared identifier 'pwd_1'
pwd_1 = p; 
^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/getpwd/src/obj/getpwd.o] Error 1
